--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -195,14 +195,14 @@
                 href="<%= gameWinningUrl %>"
                 target="_blank"
                 class="my-3 w-100 btn btn-dark"
-                >Tap to Access</a
+                >Open Link</a
               >
             </div>
             <%}%>
             <p>Select Start game to attempt a higher score!</p>
             <div class="game-buttons-container">
-              <a href="" class="mbtn m-2">Start Game</a>
-              <a href="/user/profile" class="mbtn btn-secondary m-2"
+              <a href="" class="mbtn">Start Game</a>
+              <a href="/user/profile" class="mbtn btn-secondary"
                 >Go Back to Profile</a
               >
               <button class="mbtn ldrbrd_btn">Leaderboard</button>
