--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -790,12 +790,26 @@
                         <h3 class="m-0 text-center">Image Center</h3>
                       </div>
                       <div class="card-body">
-                        <a href="/admin/export/images" class="btn btn-success"
-                          >Export</a
-                        >
-                        <button class="btn btn-info importImageBTN">
-                          Import
-                        </button>
+                        <div class="export-map-images">
+                          <h3 class="mb-3">Map Images</h3>
+                          <a href="/admin/export/images" class="btn btn-success"
+                            >Export</a
+                          >
+                          <button class="btn btn-info importImageBTN">
+                            Import
+                          </button>
+                        </div>
+                        <div class="export-pacman-images mt-3 pt-3 border-top">
+                          <h3 class="mb-3">Pacman Images</h3>
+                          <a
+                            href="/admin/export/images/pacman"
+                            class="btn btn-success"
+                            >Export</a
+                          >
+                          <button class="btn btn-info importPacmanImageBTN">
+                            Import
+                          </button>
+                        </div>
                       </div>
                     </div>
                   </div>
