--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -1,180 +1,188 @@
-<div class="howtoplaycontainer"></div>
-<div class="user-navbar">
-  <div class="game-tracker">
-    <div class="internal">
-      <div class="row">
-        <div class="col-4">
-          <div class="internal">
-            <div class="time-taken"></div>
-          </div>
+  <%if(!user){%>
+  <div class="login-prompt-modal" style="display: none">
+    <div class="inner">
+      <div class="body">
+        <h1>WELCOME!</h1>
+        <div class="section login-section">
+          <h3>Create an account to play</h3>
+          <a href="/auth" class="spl-modal-btn">Create</a>
         </div>
-        <div class="col-4">
-          <div class="internal">
-            <div class="life-container"></div>
-          </div>
+        <div class="section how-to-play-section">
+          <h3>Learn How to Play?</h3>
+          <a href="/quick-tutorial" class="spl-modal-btn">Quick Tutorial</a>
+        </div>
+        <div class="section">
+          <button class="spl-modal-btn exit">Exit</button>
         </div>
       </div>
     </div>
   </div>
-  <div class="navbar-holder">
-    <div class="navbar-container">
-      <input type="hidden" id="userLifeCount" value="lifes" />
-      <% if(user && lifes>0 && gameStarted && playable){ %>
-      <input type="hidden" id="mapParsedIdRaw" value="<%= mapParsedIdRaw %>" />
-      <div class="unit game-timer">
-        <div class="text-center game-timer">
-          <div class="time-countdown">00:00:00</div>
-          <div class="title">Time Played</div>
-        </div>
-      </div>
-      <% if(lifes!=99){ %>
-      <div class="unit game-life">
-        <div class="text-center game-lifes">
-          <div class="life-center">
-            <% for(let i = 0; i < (3 - lifes); i++) { %>
-            <span class="fa fa-heart"></span>
-            <% } %> <% for(let i = 0; i < lifes; i++) { %>
-            <span class="fa fa-heart active"></span>
-            <% } %>
-          </div>
-        </div>
-      </div>
-      <%}%> <%}%>
-      <div class="unit navigate">
-        <ul>
-          <% if (user) { %>
-          <li data-id="/user/profile">
-            <span class="fa fa-bars"></span>
-          </li>
-          <% if (user.role.current=="admin") { %>
-          <li data-id="/admin">Admin</li>
-          <%}%> <% if (locals.missions) { %>
-          <li data-id="/missions">Missions</li>
-          <% } %> <% }else{ %>
-          <li data-id="/auth">Login</li>
-          <div class="login-prompt-modal" style="display: none;">
-            <div class="inner">
-              <div class="body">
-                <h1>WELCOME!</h1>
-                <div class="section login-section">
-                  <h3>Create an account to play</h3>
-                  <a href="/auth" class="spl-modal-btn">Create</a>
-                </div>
-                <div class="section how-to-play-section">
-                  <h3>Learn How to Play?</h3>
-                  <a href="/quick-tutorial" class="spl-modal-btn">Quick Tutorial</a>
-                </div>
-                <div class="section">
-                  <button class="spl-modal-btn exit">Exit</button>
-                </div>
+  <%}%>
+  <div class="howtoplaycontainer"></div>
+  <div class="user-navbar">
+    <div class="game-tracker">
+      <div class="internal">
+        <div class="row">
+          <div class="col-4">
+            <div class="internal">
+              <div class="time-taken"></div>
             </div>
           </div>
-          <% } %>
-        </ul>
+          <div class="col-4">
+            <div class="internal">
+              <div class="life-container"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="navbar-toggler">
-      <span class="fa fa-arrow-down"></span>
+    <div class="navbar-holder">
+      <div class="navbar-container">
+        <input type="hidden" id="userLifeCount" value="lifes" />
+        <% if(user && lifes>0 && gameStarted && playable){ %>
+        <input
+          type="hidden"
+          id="mapParsedIdRaw"
+          value="<%= mapParsedIdRaw %>"
+        />
+        <div class="unit game-timer">
+          <div class="text-center game-timer">
+            <div class="time-countdown">00:00:00</div>
+            <div class="title">Time Played</div>
+          </div>
+        </div>
+        <% if(lifes!=99){ %>
+        <div class="unit game-life">
+          <div class="text-center game-lifes">
+            <div class="life-center">
+              <% for(let i = 0; i < (3 - lifes); i++) { %>
+              <span class="fa fa-heart"></span>
+              <% } %> <% for(let i = 0; i < lifes; i++) { %>
+              <span class="fa fa-heart active"></span>
+              <% } %>
+            </div>
+          </div>
+        </div>
+        <%}%> <%}%>
+        <div class="unit navigate">
+          <ul>
+            <% if (user) { %>
+            <li data-id="/user/profile">
+              <span class="fa fa-bars"></span>
+            </li>
+            <% if (user.role.current=="admin") { %>
+            <li data-id="/admin">Admin</li>
+            <%}%> <% if (locals.missions) { %>
+            <li data-id="/missions">Missions</li>
+            <% } %> <% }else{ %>
+            <li data-id="/auth">Login</li>
+            <% } %>
+          </ul>
+        </div>
+      </div>
+      <div class="navbar-toggler">
+        <span class="fa fa-arrow-down"></span>
+      </div>
     </div>
   </div>
-</div>
-<style>
-  .user-navbar {
-    position: fixed;
-    bottom: 0;
-    justify-content: center;
-    width: 100%;
-    z-index: 3;
-  }
-
-  .user-navbar .navbar-container {
-    background: #fff;
-    border-radius: 5px;
-    padding: 5px;
-    font-family: sans-serif;
-    text-align: center;
-    box-shadow: 0 -5px 10px #00000059;
-    display: flex;
-    overflow-x: scroll;
-    height: 65px;
-    transition: 0.5s;
-  }
-
-  .user-navbar .navbar-container.collapsed {
-    height: 0px;
-  }
-
-  .user-navbar .navbar-container .unit {
-    white-space: nowrap;
-    margin: auto;
-  }
-
-  .user-navbar .navbar-container ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .user-navbar .navbar-container ul li {
-    display: inline-block;
-    border: 1px solid #ffabab;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.1s;
-    color: #3e3e3e;
-  }
-
-  .user-navbar .navbar-container ul li:hover {
-    background: #ff0000;
-    color: white;
-  }
-
-  .game-lifes .life-center span.fa {
-    font-size: 30px;
-    margin: 0 5px;
-    color: #0000002e;
-    -webkit-text-stroke: 2px black;
-    opacity: 0.4;
-  }
-
-  .game-lifes .life-center span.fa.active {
-    color: red;
-    text-shadow: 2px 2px 20px red;
-    opacity: 1;
-  }
-
-  .game-timer .time-countdown {
-    font-size: 1.5rem;
-  }
-
-  .game-timer .title {
-    font-size: 0.78rem;
-  }
-
-  @media screen and (max-width: 430px) {
-    .user-navbar .navbar-container .unit {
-      transform: scale(0.9);
+  <style>
+    .user-navbar {
+      position: fixed;
+      bottom: 0;
+      justify-content: center;
+      width: 100%;
+      z-index: 3;
     }
-  }
-  .navbar-holder {
-    position: relative;
-  }
 
-  .navbar-holder .navbar-toggler {
-    position: absolute;
-    top: -35px;
-    left: 5px;
-    background: white;
-    padding: 10px 20px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    box-shadow: 0 -5px 5px 0 #00000050;
-    transition: 0.2s;
-    cursor: pointer;
-  }
+    .user-navbar .navbar-container {
+      background: #fff;
+      border-radius: 5px;
+      padding: 5px;
+      font-family: sans-serif;
+      text-align: center;
+      box-shadow: 0 -5px 10px #00000059;
+      display: flex;
+      overflow-x: scroll;
+      height: 65px;
+      transition: 0.5s;
+    }
 
-  .navbar-toggler:hover {
-    box-shadow: 0 0px 5px 0 #00000000;
-  }
-</style>
+    .user-navbar .navbar-container.collapsed {
+      height: 0px;
+    }
+
+    .user-navbar .navbar-container .unit {
+      white-space: nowrap;
+      margin: auto;
+    }
+
+    .user-navbar .navbar-container ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .user-navbar .navbar-container ul li {
+      display: inline-block;
+      border: 1px solid #ffabab;
+      padding: 5px 10px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: 0.1s;
+      color: #3e3e3e;
+    }
+
+    .user-navbar .navbar-container ul li:hover {
+      background: #ff0000;
+      color: white;
+    }
+
+    .game-lifes .life-center span.fa {
+      font-size: 30px;
+      margin: 0 5px;
+      color: #0000002e;
+      -webkit-text-stroke: 2px black;
+      opacity: 0.4;
+    }
+
+    .game-lifes .life-center span.fa.active {
+      color: red;
+      text-shadow: 2px 2px 20px red;
+      opacity: 1;
+    }
+
+    .game-timer .time-countdown {
+      font-size: 1.5rem;
+    }
+
+    .game-timer .title {
+      font-size: 0.78rem;
+    }
+
+    @media screen and (max-width: 430px) {
+      .user-navbar .navbar-container .unit {
+        transform: scale(0.9);
+      }
+    }
+    .navbar-holder {
+      position: relative;
+    }
+
+    .navbar-holder .navbar-toggler {
+      position: absolute;
+      top: -35px;
+      left: 5px;
+      background: white;
+      padding: 10px 20px;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+      box-shadow: 0 -5px 5px 0 #00000050;
+      transition: 0.2s;
+      cursor: pointer;
+    }
+
+    .navbar-toggler:hover {
+      box-shadow: 0 0px 5px 0 #00000000;
+    }
+  </style>
+</div>
