Upload Tutorial feature

--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -5,7 +5,7 @@
         <h1>WELCOME!</h1>
         <div class="section login-section">
           <h3>Create an account to play</h3>
-          <a href="/auth" class="spl-modal-btn">Create</a>
+          <a href="/auth" class="spl-modal-btn">Create / LogIn</a>
         </div>
         <div class="section how-to-play-section">
           <h3>Learn How to Play?</h3>
