--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -813,7 +813,6 @@
                       </div>
                     </div>
                   </div>
-
                   <div class="col-xl-6 my-2">
                     <div class="card">
                       <div class="card-header">
@@ -864,6 +863,36 @@
                           </thead>
                           <tbody class="customButtonList"></tbody>
                         </table>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xl-6 my-2">
+                    <div class="card">
+                      <div class="card-header">
+                        <h3 class="m-0 text-center">Quick Tutorial</h3>
+                      </div>
+                      <div class="card-body">
+                        <div class="quick-tutorial-images">
+                          <div class="new-image-uploader my-2">
+                            <button
+                              class="btn btn-success w-100 uploadTutorialPicture"
+                            >
+                              <span class="fa fa-plus"></span>
+                              <span> Add Tutorial</span>
+                            </button>
+                          </div>
+                          <div class="image-list">
+                            <table class="table table-bordered">
+                              <thead>
+                                <tr>
+                                  <th>Image</th>
+                                  <th>Action</th>
+                                </tr>
+                              </thead>
+                              <tbody class="quick-tutorial-list"></tbody>
+                            </table>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
