--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -873,6 +873,17 @@
                       </div>
                       <div class="card-body">
                         <div class="quick-tutorial-images">
+                          <div class="mb-4 text-center">
+                            <a
+                              class="btn btn-success"
+                              href="/admin/export/tutorial"
+                            >
+                              <span class="fa fa-upload"></span> Export
+                            </a>
+                            <a class="btn btn-primary importTutorialBTN">
+                              <span class="fa fa-download"></span> Import
+                            </a>
+                          </div>
                           <div class="new-image-uploader my-2">
                             <button
                               class="btn btn-success w-100 uploadTutorialPicture"
