--- a/views/pages/quick_tutorial.ejs
+++ b/views/pages/quick_tutorial.ejs
@@ -17,22 +17,10 @@
     />
   </head>
   <body>
-    <!-- Hero Section -->
-    <!-- Hero Section -->
-    <section class="bg-dark text-white text-center py-5">
-      <div class="container">
-        <h1 class="display-4 fw-bold">Quick Tutorial</h1>
-        <p class="lead">
-          Learn how to play <span class="text-warning">UrbanEscape</span> and
-          become a city explorer!
-        </p>
-      </div>
-    </section>
-
     <!-- Carousel Section -->
     <section class="py-5 bg-dark">
       <div class="container">
-        <h2 class="text-center text-white mb-4">Game Snapshots</h2>
+        <h2>Quick Tutorial</h2>
         <div
           id="carouselExample"
           class="carousel slide shadow-lg rounded overflow-hidden"
@@ -70,11 +58,11 @@
     <!-- CTA -->
     <section class="bg-primary text-white text-center py-5">
       <div class="container">
-        <h2 class="mb-3">Ready to Escape?</h2>
-        <a href="/register" class="btn btn-warning btn-lg me-3"
+        <h2 class="mb-3">Ready?</h2>
+        <a href="/register" class="my-2 btn btn-warning btn-lg me-3"
           >Create Account Now</a
         >
-        <button onclick="goToMap()" class="btn btn-warning btn-lg">
+        <button onclick="goToMap()" class="my-2 btn btn-warning btn-lg">
           Go back to Map
         </button>
       </div>
