--- a/views/pages/quick_tutorial.ejs
+++ b/views/pages/quick_tutorial.ejs
@@ -17,56 +17,46 @@
     />
   </head>
   <body>
-    <!-- Carousel Section -->
-    <section class="py-5 bg-dark">
-      <div class="container">
-        <h2>Quick Tutorial</h2>
-        <div
-          id="carouselExample"
-          class="carousel slide shadow-lg rounded overflow-hidden"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <%tutorialImages.forEach(d=>{%>
-            <div class="carousel-item active">
-              <img src="<%=d.url%>" class="d-block w-100" alt="<%=d.name%>" />
-            </div>
-            <%})%>
+    <div class="container">
+      <h2 class="my-2">Quick Tutorial</h2>
+      <div
+        id="carouselExample"
+        class="carousel slide shadow-lg rounded overflow-hidden"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <%tutorialImages.forEach(d=>{%>
+          <div class="carousel-item active">
+            <img src="<%=d.url%>" class="d-block w-100" alt="<%=d.name%>" />
           </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+          <%})%>
         </div>
-      </div>
-    </section>
-
-    <!-- CTA -->
-    <section class="bg-primary text-white text-center py-5">
-      <div class="container">
-        <h2 class="mb-3">Ready?</h2>
-        <a href="/register" class="my-2 btn btn-warning btn-lg me-3"
-          >Create Account Now</a
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="prev"
         >
-        <button onclick="goToMap()" class="my-2 btn btn-warning btn-lg">
-          Go back to Map
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
         </button>
       </div>
-    </section>
+      <div class="mt-3 text-center">
+        <a href="/auth" class="btn btn-primary">Login/Register</a>
+        <button class="btn btn-secondary" onclick="goToMap()">
+          Back to Map
+        </button>
+      </div>
+    </div>
     <script>
       function goToMap() {
         let loc = localStorage.lastMap;
