Minor Heading Align

--- a/views/pages/quick_tutorial.ejs
+++ b/views/pages/quick_tutorial.ejs
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="container">
-      <h2 class="my-2">Quick Tutorial</h2>
+      <h2 class="my-2 text-center">Quick Tutorial</h2>
       <div
         id="carouselExample"
         class="carousel slide shadow-lg rounded overflow-hidden"
