--- a/views/pages/quick_tutorial.ejs
+++ b/views/pages/quick_tutorial.ejs
@@ -25,11 +25,11 @@
         data-bs-ride="carousel"
       >
         <div class="carousel-inner">
-          <%tutorialImages.forEach(d=>{%>
-          <div class="carousel-item active">
-            <img src="<%=d.url%>" class="d-block w-100" alt="<%=d.name%>" />
+          <% tutorialImages.forEach((d, i) => { %>
+          <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+            <img src="<%= d.url %>" class="d-block w-100" alt="<%= d.name %>" />
           </div>
-          <%})%>
+          <% }) %>
         </div>
         <button
           class="carousel-control-prev"
