--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -54,12 +54,15 @@
         <div class="my-3">
           <div class="row">
             <div class="col-sm-6 my-2">
-              <button onclick="backToMap()" class="btn btn-warning w-100 my-1">
+              <button
+                onclick="modalToggle()"
+                class="btn btn-success w-100 my-1"
+              >
                 Go Back to Profile
               </button>
             </div>
             <div class="col-sm-6 my-2">
-              <a href="/user/profile" class="btn btn-warning w-100 my-1"
+              <a href="/user/profile" class="btn btn-primary w-100 my-1"
                 >My Profile</a
               >
             </div>
@@ -80,12 +83,71 @@
         </div>
       </div>
     </div>
+    <div
+      class="modal fade"
+      id="backToMapModal"
+      tabindex="-1"
+      aria-labelledby="backToMapModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3
+              class="m-0 text-center w-100 text-success"
+              id="exampleModalLabel"
+            >
+              Game On
+            </h3>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="py-5">
+              <p class="lead m-0 text-center">
+                Click <span class="text-success"><b>Start Game</b></span> to
+                play.
+              </p>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <div class="text-center">
+              <button class="me-2 btn btn-info backBTN" data-id="restartgame">
+                Restart Game
+              </button>
+              <button class="me-2 btn btn-secondary" data-bs-dismiss="modal">
+                Go Back to Profile
+              </button>
+              <button class="btn btn-warning backBTN" data-id="leaderboard">
+                Leaderboard
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-      function backToMap() {
-        let tgt = localStorage.lastMap;
-        if (!tgt) window.location.href = `/user/profile`;
-        window.location.href = `/map/${tgt}`;
+      function modalToggle() {
+        $("#backToMapModal").modal("toggle");
       }
+      $(document).ready(() => {
+        $(".backBTN").click(function () {
+          const curID = $(this).data("id");
+          let actTo = "leaderboard";
+          if (curID == "restartgame") {
+            actTo = "map";
+          }
+          let tgt = localStorage.lastMap;
+          if (!tgt) tgt = $(this).data("target");
+          window.location.href = `/${actTo}/${tgt}`;
+        });
+      });
     </script>
   </body>
 </html>
