Homepage Toggle to Back

--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -58,7 +58,7 @@
                 onclick="modalToggle()"
                 class="btn btn-success w-100 my-1"
               >
-                Go Back to Profile
+                Go Back to Home
               </button>
             </div>
             <div class="col-sm-6 my-2">
@@ -120,7 +120,7 @@
                 Restart Game
               </button>
               <button class="me-2 btn btn-secondary" data-bs-dismiss="modal">
-                Go Back to Profile
+                Go Back to Home
               </button>
               <button class="btn btn-warning backBTN" data-id="leaderboard">
                 Leaderboard
