Fixed text btns

--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -58,7 +58,7 @@
                 onclick="modalToggle()"
                 class="btn btn-success w-100 my-1"
               >
-                Go Back to Home
+                Start Game
               </button>
             </div>
             <div class="col-sm-6 my-2">
@@ -117,7 +117,7 @@
           <div class="modal-footer">
             <div class="text-center">
               <button class="me-2 btn btn-info backBTN" data-id="restartgame">
-                Restart Game
+                Start Game
               </button>
               <button class="me-2 btn btn-secondary" data-bs-dismiss="modal">
                 Go Back to Home
