--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -115,7 +115,7 @@
           <div class="modal-footer">
             <div class="text-center">
               <button class="me-2 btn btn-info backBTN" data-id="restartgame">
-                Restart Game
+                Start Game
               </button>
               <button class="me-2 btn btn-secondary" data-bs-dismiss="modal">
                 Go Back to Profile
