--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -1056,6 +1056,65 @@
                   </div>
                 </div>
                 <% } %>
+
+                <hr />
+
+                <div class="quiz-manager">
+                  <p class="m-0">Quiz manager</p>
+                  <div class="question-controller px-2 py-3">
+                    <textarea
+                      type="text"
+                      placeholder="Enter Quiz Question!"
+                      class="form-control"
+                      id="quizQuestion"
+                      rows="3"
+                    ></textarea>
+                  </div>
+                  <div class="question-options-controller bg-light py-3">
+                    <div class="d-flex align-items-center gap-2">
+                      <span>1).</span>
+                      <input
+                        type="text"
+                        class="form-control my-1 quiz-option-unit"
+                        placeholder="Choise Option"
+                      />
+                    </div>
+                    <div class="d-flex align-items-center gap-2">
+                      <span>2).</span>
+                      <input
+                        type="text"
+                        class="form-control my-1 quiz-option-unit"
+                        placeholder="Choise Option"
+                      />
+                    </div>
+                    <div class="d-flex align-items-center gap-2">
+                      <span>3).</span>
+                      <input
+                        type="text"
+                        class="form-control my-1 quiz-option-unit"
+                        placeholder="Choise Option"
+                      />
+                    </div>
+                    <div class="d-flex align-items-center gap-2">
+                      <span>4).</span>
+                      <input
+                        type="text"
+                        class="form-control my-1 quiz-option-unit"
+                        placeholder="Choise Option"
+                      />
+                    </div>
+                  </div>
+                  <div class="quiz-answer-index bg-light px-2 py-3">
+                    <input
+                      type="number"
+                      min="1"
+                      max="4"
+                      placeholder="Enter Quiz Answer (1-4)"
+                      class="form-control rounded-0"
+                      id="quizAnswer"
+                    />
+                  </div>
+                </div>
               </form>
             </div>
           </div>
