Added full error screen

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -167,6 +167,20 @@
         </div>
       </div>
     </div>
+    <div
+      class="quiz-box-alert fixed-top h-100 w-100 bg-white"
+      style="display: none"
+    >
+      <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="shadow-lg p-3 text-center" style="min-width: 400px">
+          <h4 class="m-0 text-danger">The answer is incorrect!</h4>
+          <p class="my-2 text-secondary">
+            please wait 5 minutes before try again!
+          </p>
+          <button class="btn btn-outline-danger mt-3">Go Back</button>
+        </div>
+      </div>
+    </div>
     <div class="fullscreen-toggle">
       <div class="fullscreen p-2 bg-primary text-white">
         <span>Full Screen</span>
