--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -1070,6 +1070,16 @@
                       rows="3"
                     ></textarea>
                   </div>
+                  <div class="my-2">
+                    <p class="m-0 small">Cooldown Time (in minutes)</p>
+                    <input
+                      class="form-control"
+                      placeholder="Enter Cooldown Time"
+                      id="cooldowntimeValue"
+                      type="number"
+                      min="1"
+                    />
+                  </div>
                   <div class="question-options-controller bg-light py-3">
                     <div class="d-flex align-items-center gap-2">
                       <span>1).</span>
