--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -174,6 +174,9 @@
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="shadow-lg p-3 text-center" style="min-width: 400px">
           <h4 class="m-0 text-danger">The answer is incorrect!</h4>
+          <div class="text-danger h1 mt-3 alert-icon">
+            <i class="fa fa-warning"></i>
+          </div>
           <p class="my-2 text-secondary">
             please wait 5 minutes before try again!
           </p>
