--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -52,40 +52,48 @@
 }
 
 .sidebar-container .sidebar .logo {
-  color: #ffffff;
-  -webkit-text-stroke: 1px #000;
-  text-shadow: 2px 2px #000000;
-  transition: 0.1s;
   cursor: pointer;
 }
 
-.sidebar-container .sidebar .logo:hover {
-  text-shadow: 0 0 #000000;
+.sidebar-container .sidebar .logo img {
+  width: 100%;
+  max-width: 200px;
+  border-radius: 50%;
 }
 
 .sidebar-container .sidebar .menu ul li {
-  padding: 5px 10px;
+  padding: 5px 20px;
   margin: 2px 0;
   transition: 0.2s;
   cursor: pointer;
+  color: #00000060;
+  border: 2px solid transparent;
 }
 
 .sidebar-container .sidebar .menu ul {
-  text-align: center;
   font-weight: 500;
   letter-spacing: 2px;
   padding: 0;
+  width: max-content;
 }
 
 .sidebar-container .sidebar .menu ul li:hover {
+  color: #00000080;
   background: white;
 }
 
 .sidebar-container .sidebar .menu ul li.active {
   background: white;
+  color: #000000;
   border-radius: 20px;
   border: 2px solid lightgrey;
   box-shadow: 2px 5px 10px lightgrey;
+}
+
+.sidebar .menu {
+  position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .map-controller {
@@ -539,4 +547,8 @@
 .icon-container {
   max-height: 400px;
   overflow: scroll;
+}
+
+td {
+  vertical-align: middle;
 }
