--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -32,6 +32,9 @@
   <body>
     <div class="row vh-100 justify-content-center align-items-center m-0">
       <div class="col-sm-10 col-md-8 col-lg-6">
+        <div class="my-3 text-center">
+          <img src="/images/logo.png" width="200px" alt="welcome dancer" />
+        </div>
         <h2 class="text-center text-warning">
           <span class="bg-warning rounded-1 border-1 p-3 text-white"
             >WELCOME!</span
@@ -149,5 +152,10 @@
         });
       });
     </script>
+    <style>
+      body {
+        background: #fafafa;
+      }
+    </style>
   </body>
 </html>
