Admin to Adjust Image Border Radius and Colour

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -552,3 +552,10 @@
 td {
   vertical-align: middle;
 }
+
+.border-previewer {
+  height: 100px;
+  width: 100px;
+  background: url(https://placehold.co/100?text=Hello+World&font=roboto) center;
+  background-size: cover;
+}
